--- a/mainsite/static/ogf/css/printstyles.scss
+++ b/mainsite/static/ogf/css/printstyles.scss
@@ -2,13 +2,70 @@
 /* Printable Page Styles
 ====================================================================== */
 
-$printFontSize: 12pt;
+
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* END RESET */
+/* ********* */
+
+//
+//$printFontSize:   100%;
+$printFontSize:   20px;
+$printLineHeight: 110%;
 
 html, html * {
   font-family: Arial, sans-serif;
 }
 body {
   font-size: $printFontSize;
+  //line-height: $printLineHeight; // required to make line heights the same
   width:  100%;
 }
 body * {
@@ -23,13 +80,15 @@ body * {
 #printMe, #printMe * {
   visibility: visible;
   font-size: $printFontSize;
+  //line-height: $printLineHeight;
 }
 
 #printMe {
   position: absolute;
   left: 0;
   top: 0;
-  font-size: $printFontSize;
+  //font-size: $printFontSize;
+  //line-height: $printLineHeight;
 
   table {
     table-layout: fixed;
@@ -44,11 +103,17 @@ body * {
   }
 }
 .articleBodyText, .articleBodyText p {
-  font-size: $printFontSize;
+  //font-size: $printFontSize;
+  //line-height: $printLineHeight;
 }
 .articlePicture {
   width:  50%;
   height: auto;
   float:  right;
   margin: 0 0 10px 10px;
+}
+img {
+  page-break-before: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+  page-break-after: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+  page-break-inside: avoid; /* or 'auto' */
 }
