--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -49,7 +49,7 @@
                 <form class="form-inline" action="https://dev.spe.org/sitemap/search.php" method="post" accept-charset="utf-8">
                     <div class="input-group">
                         <input class="form-control" type="search" name="q" id="gssTextInput" placeholder="Search"/>
-                        <input type="hidden" id="gssscope" name="scope"/>
+                        <input type="hidden" id="gssscope" name="scope" value="ogf"/>
                         <span class="input-group-btn">
 {#                            <button class="btn btn-default" type="button">Go!</button>#}
                             <input class="btn btn-default" type="submit" name="submit" value="Go!" id="gssSubmitButton"/>
