adding sas comment to see a change

--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -50,6 +50,7 @@
                     <div class="input-group">
                         <input class="form-control" type="search" name="q" id="gssTextInput" placeholder="Search"/>
                         <input type="hidden" id="gssscope" name="scope" value="ogf"/>
+                        <!-- sas comment -->
                         <span class="input-group-btn">
 {#                            <button class="btn btn-default" type="button">Go!</button>#}
                             <input class="btn btn-default" type="submit" name="submit" value="Go!" id="gssSubmitButton"/>
