--- a/spe_blog/templates/spe_blog/plugins/brief_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_detail.html
@@ -30,8 +30,8 @@
 
                 {% if show_paybox %}
                     <div class="col-sm-12 becomeMember text-center">
-                        <p>You are have access to this full article to experience the outstanding content that is available to OGF subscribers and SPE members.</p>
-                        <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a><br>
+                        <p>You have access to this full article to experience the outstanding content that is available to OGF subscribers and SPE members.</p>
+                        <p>Please <a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a><br>
                             in order to gain full access to the rest that OGF has to offer.</p>
                 </div>
                 {% endif %}
@@ -43,7 +43,7 @@
                 {{ article.introduction | safe }}...
 
                 <div class="col-sm-12 becomeMember text-center">To read the rest of the article, please<br>
-                    <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a>
+                    <a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a>
                 </div>
 
 
