improved performance on sorting and searching for browse images

--- a/ckeditor_uploader/templates/ckeditor/browse.html
+++ b/ckeditor_uploader/templates/ckeditor/browse.html
@@ -111,7 +111,7 @@
             $('#img-send').prop('disabled',true);
             // galleriffic
             jQuery(document).ready(function($) {
-                alert('jquery loaded...');
+                // alert('jquery loaded...');
                 $('.img-clickable').live('click', function() {
                     $('#img-preview').attr('src', $(this).attr('data-src'));
                     $('#img-send').attr('href', $(this).attr('data-src'));
