Image captions and latest header fix.

--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -12,6 +12,14 @@
   margin-top:             25px;
 }
 
+.imgattrib {
+  font-size:              10px;
+}
+.imgcapt {
+  margin-top:             5px;
+  border-bottom:          1px dotted lightgrey;
+}
+
 /* ********************************** */
 /* SUPER FEATURE & POPULAR NOW */
 .featurePop {
