--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -63,7 +63,7 @@
                 <div class="col-sm-12 becomeMember text-center">
                     <p>You have access to this full article to experience the outstanding content<br>
                         that is available to OGF subscribers and SPE members.</p>
-                    <p>Please <a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a><br>
+                    <p>Please {% if is_loggedout %}<a href="{{ login.url }}" class="loginLink">{{ login.label }}</a>, {% endif %}<a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a><br>
                     in order to gain full access to all that OGF has to offer.</p>
             </div>
             {% endif %}
@@ -77,11 +77,7 @@
 
             <div class="col-sm-12 becomeMember text-center">This article is reserved for SPE members and OGF subscribers.<br>
                 If you would like to continue reading,<br>
-                please {% if is_loggedout %}{% if login.url %}
-                    <a href="{{ login.url }}" class="loginLink">{{ login.label }}</a>
-                    {% else %}
-                    Login using the link at the top of the page.
-                {% endif %}{% else %}<a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a>{% endif %}
+                please {% if is_loggedout %}<a href="{{ login.url }}" class="loginLink">{{ login.label }}</a>, {% endif %}<a href="http://www.spe.org/join/">JOIN SPE</a> or <a href="{{ article.publication.subscription_url }}">Subscribe to OGF</a>
             </div>
 
 
