--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -1,5 +1,7 @@
 {% load cms_tags sekizai_tags tz %}
 
+{% block title %}{{ article.title }}{% endblock title %}
+
 <div class="row articleDetail" id="printMe">
     <div class="col-sm-12 articleTitleBox">
         <hr class="tiletitlehr">
