--- a/mainsite/static/twa/css/_vars.scss
+++ b/mainsite/static/twa/css/_vars.scss
@@ -27,6 +27,7 @@ $col-twitShare:         #00ACED;
 $col-red:               #bf1d21;
 $col-yellow:            #fffb22;
 $col-sponsoryellow:     #ffca4c;
+$col-rating:            #ffa42d;
 //$col-red:            #d92226;
 
 $font-main:             "proxima-nova",sans-serif;
