--- a/spe_blog/templates/spe_blog/plugins/twa_articlebox.html
+++ b/spe_blog/templates/spe_blog/plugins/twa_articlebox.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 {% for article in articles %}
     {% if article.picture and article.picture.url %}
         <article class="tile whiteback featured-story">
@@ -17,3 +19,7 @@
 {% empty %}
     No Articles Found
 {% endfor %}
+
+{% if show_all_url and show_all_text %}
+    <div class="row"><div class="col-xs-12 see-all-div"><a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i></a></div></div>
+{% endif %}
